# nn-zero-to-hero

./: README.md  micrograd.ipynb  micrograd_working.ipynb  pyproject.toml
01_micrograd/: demo.ipynb  exercises.ipynb  main.py  refresh.ipynb  refresher.ipynb  understanding_micrograd.ipynb
01_micrograd/micrograd/: __init__.py  engine.py  graph.py  nn.py
01_micrograd/tests/: test_engine.py
02_makemore/: 03_exercises.ipynb  03_walk_through.ipynb  04_walk_through.ipynb  exercises.ipynb  understanding_makemore.ipynb  walk_through.ipynb
03_makemore_mlp/: walk_through.ipynb
makemore/: bigram_counting.ipynb  bigram_extended.ipynb  bigram_nn.ipynb  build_makemore.ipynb  lecture_2_extended.ipynb
micrograd/: Untitled.ipynb  Untitled1.ipynb  micrograd_from_scratch.ipynb  micrograd_from_scratch_2.ipynb  understanding_micrograd.ipynb
notebooks/: part_2_mlp_working.ipynb  part_3_gradients_activation.ipynb  torch_explore.ipynb
tangents/: part_3_gradients_activation.ipynb  torch_explore.ipynb
