[project]
name = "nn-zero-to-hero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "graphviz>=0.20.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "nbstripout>=0.9.1",
    "numpy<2",
    "torch==2.2.2",
]

[tool.uv.workspace]
members = ["llm-sandbox"]
